{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 308,
  "lineage": "50bf104a-5ba6-3f2e-456e-360e8931d28a",
  "resources": [
    {
      "module": "module.master",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:vpc/vpc-09056f2a03ac2c9ab",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e970f37fbfbb41ec",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e941e6cb8c1fa552",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09056f2a03ac2c9ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03aba4722c67b1f4e",
            "owner_id": "340752819827"
          }
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ca0754cabb20b45",
            "arn": "arn:aws:ec2:us-east-1:340752819827:instance/i-09e4b0e558012c90b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e4b0e558012c90b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "master-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06718425be33b6d1f",
            "private_dns": "ip-172-31-0-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.39",
            "public_dns": "ec2-54-211-218-213.compute-1.amazonaws.com",
            "public_ip": "54.211.218.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06783b0dee6dcef73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "master-k8s-cluster-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0669312ffde6b0cb5",
            "tags": {
              "Name": "master-server"
            },
            "tags_all": {
              "Name": "master-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09bb5b2230ef9f8f4"
            ]
          },
          "dependencies": [
            "module.master.aws_key_pair.server_key",
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.aws_subnet.subnet_server",
            "module.master.data.aws_ami.ubuntu",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group/sg-09bb5b2230ef9f8f4",
            "description": "Security group for Kubernetes cluster nodes",
            "egress": [],
            "id": "sg-09bb5b2230ef9f8f4",
            "ingress": [],
            "name": "master-k8s-cluster-sg",
            "name_prefix": "",
            "owner_id": "340752819827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "master-k8s-cluster-sg"
            },
            "tags_all": {
              "Name": "master-k8s-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09056f2a03ac2c9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:subnet/subnet-0669312ffde6b0cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0669312ffde6b0cb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "340752819827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "subnet_server_master"
            },
            "tags_all": {
              "name": "subnet_server_master"
            },
            "vpc_id": "vpc-09056f2a03ac2c9ab"
          },
          "dependencies": [
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group-rule/sgr-016cdf406ac5c51fa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-016cdf406ac5c51fa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09bb5b2230ef9f8f4",
            "security_group_rule_id": "sgr-016cdf406ac5c51fa",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_controller_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group-rule/sgr-0a6396b0fcfa3b627",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10257,
            "id": "sgr-0a6396b0fcfa3b627",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09bb5b2230ef9f8f4",
            "security_group_rule_id": "sgr-0a6396b0fcfa3b627",
            "tags": null,
            "tags_all": {},
            "to_port": 10257
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group-rule/sgr-0dfcd26ef92968a6e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2379,
            "id": "sgr-0dfcd26ef92968a6e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09bb5b2230ef9f8f4",
            "security_group_rule_id": "sgr-0dfcd26ef92968a6e",
            "tags": null,
            "tags_all": {},
            "to_port": 2380
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group-rule/sgr-089659f146beb458a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-089659f146beb458a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09bb5b2230ef9f8f4",
            "security_group_rule_id": "sgr-089659f146beb458a",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group-rule/sgr-0737e5d381dac143b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10250,
            "id": "sgr-0737e5d381dac143b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09bb5b2230ef9f8f4",
            "security_group_rule_id": "sgr-0737e5d381dac143b",
            "tags": null,
            "tags_all": {},
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_scheduler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group-rule/sgr-0f1f7b9d4e4d3db8b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10259,
            "id": "sgr-0f1f7b9d4e4d3db8b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09bb5b2230ef9f8f4",
            "security_group_rule_id": "sgr-0f1f7b9d4e4d3db8b",
            "tags": null,
            "tags_all": {},
            "to_port": 10259
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340752819827:security-group-rule/sgr-086273b0b3f22cba4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-086273b0b3f22cba4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09bb5b2230ef9f8f4",
            "security_group_rule_id": "sgr-086273b0b3f22cba4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.k8s_cluster_sg",
            "module.master.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}